[gd_scene load_steps=7 format=2]

[ext_resource path="res://vessels/container.gd" type="Script" id=1]
[ext_resource path="res://vessels/aquarium.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/menu/test.png" type="Texture" id=3]
[ext_resource path="res://interface/cont_ui.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 48.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 48.0

[node name="container" type="Node" index="0"]

script = ExtResource( 1 )

[node name="aquarium" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 290, 510 )
scale = Vector2( 1.1, 1.1 )
_sections_unfolded = [ "Transform" ]

[node name="spawns" type="Node" parent="." index="1"]

[node name="test2" type="TouchScreenButton" parent="." index="2"]

position = Vector2( 514.42, 58.4485 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="test" type="Area2D" parent="." index="3"]

position = Vector2( 516.344, 58.7258 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="test" index="0"]

shape = SubResource( 2 )

[node name="test_icon" type="Sprite" parent="test" index="1"]

position = Vector2( -3.72351, -0.0632744 )
texture = ExtResource( 3 )

[node name="cont_ui" parent="." index="4" instance=ExtResource( 4 )]

[node name="confirmation" type="ConfirmationDialog" parent="." index="5"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -112.0
margin_right = 55.0
margin_bottom = -42.0
rect_min_size = Vector2( 200, 70 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Please Confirm..."
resizable = false
dialog_hide_on_ok = true
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="test2" to="." method="_on_test2_pressed"]

[connection signal="body_entered" from="test" to="." method="_on_test_body_entered"]

[connection signal="confirmed" from="confirmation" to="." method="_on_confirmation_confirmed"]


